# fari-digital-twin-backend-v2

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  only_assets.py  openapi.yaml  pyproject.toml  test.db  test.py
assets_manager/: assets_manager.py
sources/: bolt.py  brussels_mobility.py  de_lijn.py  dott.py  energy.py  fixmystreet.py  infrabel.py  irceline.py  lime.py  opensky.py  pony.py  sensor_community.py  sibelga.py  sncb.py  stib.py  tec.py  telraam.py
